# Arbitrage-bot

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  README_PHASE_2.md  Technical Analysis.docx  Technical Analysis.md  Testing.ipynb  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-tests.yml
Classes/: Coin.py  Coins_map.py
documents/: demo_key.json
init/: Import_packages.py
source/: Import_packages.py
src/: __init__.py  main.py  phase_1_main.py  phase_2_main.py  testing_binance.py
src/api/: __init__.py  client.py  coingecko_client.py
src/core/: __init__.py
src/core/arbitrage/: __init__.py  engine.py
src/core/enums/: __init__.py  http_method.py
src/core/exchanges/: __init__.py
src/core/exchanges/abstract/: __init__.py  base_exchange.py  exchange_interface.py  response_normalizer.py
src/core/exchanges/binance/: __init__.py  binance.py  binance_normalizer.py
src/core/exchanges/ccxt/: __init__.py  ccxt_connector.py  ccxt_normalizer.py
src/core/exchanges/kucoin/: __init__.py  kucoin.py  kucoin_normalizer.py
src/models/: Coin.py  Coins_map.py  __init__.py
src/scripts/: bull_run.py  duplicates.py  freq.py  graph.py  profit_hist.py  summarize.py
src/utils/: __init__.py  convert_tz.py  logger.py  timezone.py
src/utils/logging/: logger.py
tests/: __init__.py  conftest.py
tests/core/: __init__.py
tests/core/api/: __init__.py  test_cmc_client.py
tests/core/arbitrage/: test_arbitrage_engine.py
tests/core/exchanges/: __init__.py
tests/core/exchanges/abstract/: test_base_exchange.py
(+6 files in other folders)
